--- a/views/admin/orderDetails.ejs
+++ b/views/admin/orderDetails.ejs
@@ -5,7 +5,7 @@
             <div class="content-header">
                 <div>
                     <h2 class="content-title card-title">Order detail</h2>
-                    <p>Details for Order ID: <%= order._id %>
+                    <p>Details for Order ID: <%= order.ordersId %>
                     </p>
                 </div>
             </div>
