--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -86,7 +86,7 @@
                                     <img alt="Evara" src="/imgs/theme/icons/icon-cart.svg">
                                     <!-- <span class="pro-count blue">2</span> -->
                                 </a>
-                                <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                                <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                     <ul>
                                         <li>
                                             <div class="shopping-cart-img">
@@ -122,7 +122,7 @@
                                             <a href="shop-checkout.html">Checkout</a>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
@@ -375,7 +375,7 @@
                                 <img alt="Evara" src="/imgs/theme/icons/icon-cart.svg">
                                 <!-- <span class="pro-count white">2</span> -->
                             </a>
-                            <div class="cart-dropdown-wrap cart-dropdown-hm2">
+                            <!-- <div class="cart-dropdown-wrap cart-dropdown-hm2">
                                 <ul>
                                     <li>
                                         <div class="shopping-cart-img">
@@ -411,7 +411,7 @@
                                         <a href="shop-checkout.html">Checkout</a>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                         <div class="header-action-icon-2 d-block d-lg-none">
                             <div class="burger-icon burger-icon-white">
