--- a/views/admin/userList.ejs
+++ b/views/admin/userList.ejs
@@ -3,22 +3,7 @@
 
 
 
-        <!-- Search Form -->
-        <div class="col-search">
-            <form class="searchform" action="/admin/userList" method="get">
-                <div class="input-group">
-                    <input type="text" class="form-control" id="searchInput" placeholder="Search name">
 
-                    <select name="category" class="input-filter">
-                        <option value="">All Users</option>
-                        <option value="active" <%=selectedStatus==='active' ? 'selected' : '' %>>Active Users</option>
-                        <option value="blocked" <%=selectedStatus==='blocked' ? 'selected' : '' %>>Blocked Users
-                        </option>
-                    </select>
-                    <button class="btn btn-light bg" type="submit"><i class="material-icons md-search"></i></button>
-                </div>
-            </form>
-        </div>
 
 
 
@@ -26,7 +11,26 @@
             <div class="container">
                 <div class="content-header">
                     <h2 class="content-title card-title">User Management</h2>
+                
+                <!-- Search Form -->
+                <div class="col-search">
+                    <form class="searchform" action="/admin/userList" method="get">
+                        <div class="input-group">
+                            <input type="text" class="form-control" id="searchInput" placeholder="Search name">
+
+                            <select name="category" class="input-filter">
+                                <option value="">All Users</option>
+                                <option value="active" <%=selectedStatus==='active' ? 'selected' : '' %>>Active Users
+                                </option>
+                                <option value="blocked" <%=selectedStatus==='blocked' ? 'selected' : '' %>>Blocked Users
+                                </option>
+                            </select>
+                            <button class="btn btn-light bg" type="submit"><i
+                                    class="material-icons md-search"></i></button>
+                        </div>
+                    </form>
                 </div>
+            </div>
                 <div class="row">
                     <% if (users.length===0) { %>
                         <div class="alert alert-info" role="alert">
@@ -83,7 +87,7 @@
 
                                 </tbody>
                             </table>
-                        <% }; %>
+                            <% }; %>
                 </div>
                 <!-- Pagination -->
                 <div class="pagination-area mt-30 mb-50">
